Fix percent diffs aligning

--- a/src/components/AppSummary/_AppSummary.scss
+++ b/src/components/AppSummary/_AppSummary.scss
@@ -139,7 +139,10 @@
     }
 
     .secondary-value {
+      width: 100%;
+      text-align: end;
       color: var(--color2);
+      display: inline-block;
     }
   }
 
